<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MediModo</string>

    <string name="action_settings">Settings</string>
    <string name="action_medication_new">Add new medication</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>

    <string name="medicationoverview_today">Today</string>

    <string name="managemedication_title">Medication info</string>
    <string name="managemedication_Dosages">Dosages</string>
    <string name="managemedication_dosages_add">Add dose</string>
    <string name="managemedication_dosages_strength">Strength</string>
    <string name="managemedication_dosages_quantity">Qty</string>
    <string name="managemedication_info">Information</string>
    <string name="managemedication_schedule">Schedule</string>
    <string name="managemedication_schedule_edit">Daily, tap to change schedule</string>
    <string name="managemedication_schedule_addTime">Add time</string>
    <string name="managemedication_schedule_take">take</string>
    <string name="managemedication_schedule_time">Time</string>
    <string name="managemedication_schedule_remindertitle">Reminder me at</string>
    <string name="managemedication_usage">Usage instructions</string>
    <string name="managemedication_sidefx">Side effects</string>
    <string name="managemedication_medname_hint">Medication name</string>

    <string name="setschedule_title">Remind me</string>
    <string name="setschedule_interval_every">Every</string>
    <plurals name="scheduletype_daily">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <plurals name="scheduletype_weekly">
        <item quantity="one">Week</item>
        <item quantity="other">Weeks</item>
    </plurals>

    <plurals name="scheduletype_monthly">
        <item quantity="one">Month</item>
        <item quantity="other">Months</item>
    </plurals>

    <string name="day_every">Every day</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <string name="day_today">Today</string>
    <string name="day_monday_next">Next Monday</string>
    <string name="day_tuesday_next">Next Tuesday</string>
    <string name="day_wednesday_next">Next Wednesday</string>
    <string name="day_thursday_next">Next Thursday</string>
    <string name="day_friday_next">Next Friday</string>
    <string name="day_saturday_next">Next Saturday</string>
    <string name="day_sunday_next">Next Sunday</string>

    <string name="unit_milligram">Milligrams</string>
    <string name="unit_microgram">Micrograms</string>
    <string name="unit_gram">Grams</string>
    <string name="unit_drop">Drops</string>
    <string name="unit_stab">Stabs</string>
    <string name="unit_thing">Things</string>

    <string name="days_lowerc">days</string>
</resources>