<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card">

    <org.holoeverywhere.widget.TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:text="@string/managemedication_info"
        android:textSize="24sp"
        android:textColor="@color/card_title"
        android:fontFamily="light"/>


    <org.holoeverywhere.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/managemedication_sidefx"/>

    <org.holoeverywhere.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_weight="1"
        android:hint="@string/managemedication_usage"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_bottom" />
</org.holoeverywhere.widget.LinearLayout>