<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card">

    <org.holoeverywhere.widget.TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:text="@string/managemedication_schedule"
        android:textSize="24sp"
        android:textColor="@color/card_title"
        android:fontFamily="light"/>

    <org.holoeverywhere.widget.EditText
        android:id="@+id/btSetSchedule"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:hint="@string/managemedication_schedule_edit"
        android:inputType="none"
        android:focusable="false"
        android:background="@drawable/edittext_selector"/>

    <org.holoeverywhere.widget.EditText
        android:id="@+id/btAddNew"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/managemedication_schedule_addTime"
        android:inputType="none"
        android:focusable="false"
        android:background="@drawable/edittext_selector"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_bottom" />
</LinearLayout>