<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <org.holoeverywhere.widget.Spinner
            android:id="@+id/spScheduleInterval"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="114dp"
            style="@style/spinner_style"/>
        <org.holoeverywhere.widget.Spinner
            android:id="@+id/spScheduleType"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:minWidth="114dp"
            style="@style/spinner_style"/>
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="216dp">

        <TableLayout
            android:id="@+id/vwDaily"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableLayout>

        <TableLayout
            android:id="@+id/vwWeekly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbMonday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_monday"/>
                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbTuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_tuesday"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbWednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_wednesday"/>
                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbThursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_thursday"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbFriday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_friday"/>
                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbSaturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_saturday"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <org.holoeverywhere.widget.CheckBox
                    android:id="@+id/cbSunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/day_sunday"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/vwMonthly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

            </TableRow>
        </TableLayout>
    </ViewFlipper>
</LinearLayout>